syntax = "proto3";
package kVList;
option go_package = "/kVList";
import "kk_etcd_models/pb_kv_kk_etcd.proto";
//list kv
message KVList {
  message Input {
    string  Prefix = 1;
  }

  message Output {
    kk_etcd_models.PBListKV KVList = 1;
  }
}